--- a/warehouse-management-web/src/App.module.less
+++ b/warehouse-management-web/src/App.module.less
@@ -4,8 +4,23 @@
   flex-direction: column;
 
   .header {
-    height: 45px;
     color: white;
+    display: flex;
+    flex-direction: row;
+    background-color: #001529;
+
+    .left {
+      font-size: 1.2rem;
+      line-height: 45px;
+      width: 200px;
+      height: 100%;
+      text-align: center;
+      font-weight: bold;
+    }
+
+    .menu {
+      flex-grow: 1;
+    }
   }
 
   .content {
